# gamelibs-zlib-ng

./: CMakeLists.txt  Makefile  Makefile.in  chunkset_tpl.h  configure  deflate.c  deflate_fast.c  deflate_p.h  deflate_quick.c  deflate_rle.c  deflate_slow.c  fallback_builtins.h  gzread.c  gzread.c.in  inffast_tpl.h  match_tpl.h  meson.build  trees.c  trees_emit.h  zbuild.h  zconf.h
.github/workflows/: cmake.yml  configure.yml
arch/arm/: acle_intrins.h  arm_features.c  neon_intrins.h  slide_hash_armv6.c  slide_hash_neon.c
arch/generic/: crc32_braid_c.c
arch/power/: slide_ppc_tpl.h
arch/riscv/: chunkset_rvv.c  slide_hash_rvv.c
arch/s390/: dfltcc_deflate.c
arch/x86/: slide_hash_avx2.c  slide_hash_sse2.c
msvc/: zlib-ng.vcxproj  zlib-ng.vcxproj.filters
test/: CMakeLists.txt
